--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -5,13 +5,31 @@
   = category.name
 
 %p
+%table
+  %tr
+    %th Title
+    %th Description
+    %th Price
+    %th
+    %th
+    %th
+
   - category.products.each do |product|
-    = product.title
+    %tr
+      %td= product.title
+      %td= product.description
+      %td= product.price
+      %td= link_to 'Show', category_product_path(product.category, product)
+      -if current_user && current_user = product.user
+        %td= link_to 'Edit', edit_category_product_path(product.category, product)
+        %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
 
-%p
-  %h3 New product
-  = render 'products/form'
+- if current_user
+  %p
+    %h3 New product
+    = render 'products/form'
 
-= link_to 'Edit', edit_category_path(category)
-\|
+  -if current_user.admin?
+    = link_to 'Edit', edit_category_path(category)
+    \|
 = link_to 'Back', categories_path, class: 'btn btn-primary'
