--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,7 +14,12 @@
         .navbar-header
           %span.navbar-brand #{AppConfig.workshops_name}
         %p.navbar-text.navbar-right
-          #{current_user}
+          -if current_user
+            = "#{current_user.firstname} #{current_user.lastname}"
+            = link_to 'Logout', destroy_user_session_path, :method => :delete
+          - else
+            = link_to 'Sign in', new_user_session_path
+            = link_to 'Sign up', new_user_registration_path
     .container-fluid
       .row
         .col-lg-12
