--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -15,11 +15,13 @@
   %b Category
   = product.category.name
 
-%h3 Reviews
-= render 'reviews/form'
+- if current_user
+  %h3 Reviews
+  = render 'reviews/form'
 
 = render reviews
 
-= link_to 'Edit', edit_category_product_path(category.id, product.id)
-\|
+-if current_user && current_user.id = product.user_id
+  = link_to 'Edit', edit_category_product_path(category.id, product.id)
+  \|
 = link_to 'Back', category_products_path, class: 'btn btn-primary'
