--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -1,4 +1,7 @@
-%p= review.content
-%p
-  %b= review.rating
-  %em= review.author
+.panel.panel-primary
+  .panel-body
+    %p= review.content
+  .panel-heading
+    %p
+      %b= review.rating
+      %em= review.author
