--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -7,7 +7,8 @@
           %li= msg
 
   .form-group
-    = f.label :name
-    = f.text_field :name, class: 'form-control'
+    = f.label :name, class: 'control-label col-sm-2'
+    .col-sm-4
+      = f.text_field :name, class: 'form-control'
 
-  = f.submit 'Save', class: 'btn btn-default'
+  = f.submit 'Save', class: 'btn btn-success'
