--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,7 +1,7 @@
 %h1 Listing categories
 
-%table.table
-  %tr
+%table.table.table-hover
+  %tr.active
     %th Name
     %th
     %th
@@ -10,11 +10,11 @@
   - categories.each do |category|
     %tr
       %td= category.name
-      %td= link_to 'Show', category
+      %td= link_to 'Show', category, class: 'btn btn-success btn-block btn-sm'
       - if current_user && current_user.admin?
-        %td= link_to 'Edit', edit_category_path(category)
-        %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Edit', edit_category_path(category), class: 'btn btn-info btn-block btn-sm'
+        %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-block btn-sm'
 
 %br
 - if current_user && current_user.admin?
-  = link_to 'New Category', new_category_path
+  = link_to 'New Category', new_category_path, class: 'btn btn-primary'
