--- a/app/views/categories/new.html.haml
+++ b/app/views/categories/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New category
-
-= render 'form'
+.panel.panel-default
+  .panel-heading
+    %h1 New category
+  .panel-body
+    = render 'form'
 
 = link_to 'Back', categories_path, class: 'btn btn-primary'
