--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -5,8 +5,8 @@
   = category.name
 
 %p
-%table
-  %tr
+%table.table.table-hover
+  %tr.active
     %th Title
     %th Description
     %th Price
@@ -19,17 +19,20 @@
       %td= product.title
       %td= product.description
       %td= product.price
-      %td= link_to 'Show', category_product_path(product.category, product)
+      %td= link_to 'Show', category_product_path(product.category, product), class: 'btn btn-success btn-block btn-sm'
       -if current_user && current_user = product.user
-        %td= link_to 'Edit', edit_category_product_path(product.category, product)
-        %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Edit', edit_category_product_path(product.category, product), class: 'btn btn-info btn-block btn-sm'
+        %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-block btn-sm'
 
 - if current_user
   %p
-    %h3 New product
-    = render 'products/form'
+    .panel.panel-default
+      .panel-heading
+        %h3 New product
+      .panel-body
+        = render 'products/form'
 
   -if current_user.admin?
-    = link_to 'Edit', edit_category_path(category)
+    = link_to 'Edit', edit_category_path(category), class: 'btn btn-info'
     \|
 = link_to 'Back', categories_path, class: 'btn btn-primary'
