--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -5,15 +5,18 @@
       %ul
         - product.errors.full_messages.each do |msg|
           %li= msg
-
-  .form-group
-    = f.label :title
-    = f.text_field :title, class: 'form-control'
-  .form-group
-    = f.label :description
-    = f.text_area :description, class: 'form-control'
-  .form-group
-    = f.label :price
-    = f.text_field :price, class: 'form-control'
-
-  = f.submit 'Save', class: 'btn btn-default'
+  .form-horizontal
+    .form-group
+      = f.label :title, class: 'control-label col-sm-1'
+      .col-sm-3
+        = f.text_field :title, class: 'form-control'
+    .form-group
+      = f.label :description, class: 'control-label col-sm-1'
+      .col-sm-3
+        = f.text_area :description, class: 'form-control'
+    .form-group
+      = f.label :price, class: 'control-label col-sm-1'
+      .col-sm-3
+        = f.text_field :price, class: 'form-control'
+    .form-group
+      = f.submit 'Save', class: 'btn btn-success'
