--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New product
+.panel.panel-default
+  .panel-heading
+    %h3 New product
+  .panel-body
+    = render 'form'
 
-= render 'form'
-
-= link_to 'Back', category_products_path
+= link_to 'Back', category_products_path, class: 'btn btn-primary'
