Add profile page. Finish styling

--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -3,5 +3,5 @@
     %p= review.content
   .panel-heading
     %p
-      %b= review.rating
-      %em= review.author
+      %b= "Rating: #{review.rating}"
+      %em= "by #{review.author}"
