--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,7 @@ textarea {
 
 .jumbotron {
   background-color: white;
+  padding-top: 20px;
   h1, h2, h3, h4, h5, h6 {
     line-height: 1;
   }
@@ -77,4 +78,10 @@ span.navbar-brand {
     color: white;
     text-decoration: none;
   }
+}
+
+.product {
+  background-color: $gray-medium-light;
+  border-radius: 10px 10px 10px 10px;
+  border: 1px solid #000000;
 }
