--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -15,7 +15,7 @@
           %span.navbar-brand #{AppConfig.workshops_name}
         %p.navbar-text.navbar-right
           -if current_user
-            = link_to "#{current_user.firstname} #{current_user.lastname}", destroy_user_session_path, :method => :delete, class: 'btn btn-info'
+            = link_to "#{current_user.firstname} #{current_user.lastname}", user_path(current_user), class: 'btn btn-info'
             = link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'btn btn-danger'
           - else
             = link_to 'Sign in', new_user_session_path, class: 'btn btn-success'
