--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -17,7 +17,7 @@
       %td= product.description
       %td= product.price
       %td= link_to 'Show', category_product_path(product.category, product), class: 'btn btn-success btn-block btn-sm'
-      -if current_user && current_user = product.user
+      -if current_user && current_user.id == product.user_id
         %td= link_to 'Edit', edit_category_product_path(product.category, product), class: 'btn btn-info btn-block btn-sm'
         %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-block btn-sm'
 
